--- a/ArticleTemplates/assets/scss/modules/containers/_card.scss
+++ b/ArticleTemplates/assets/scss/modules/containers/_card.scss
@@ -104,6 +104,7 @@ Display a standard article card.
         @include mq($from: col1) {
             position: relative;
             padding-bottom: 60%;
+            overflow: hidden;
         }
     }
 
@@ -113,7 +114,7 @@ Display a standard article card.
     }
 
     .card__header {
-        margin-bottom: 1em;
+        margin-bottom: 16px;
 
         @include mq($to: col1) {
             @include flex(1);
@@ -141,10 +142,9 @@ Display a standard article card.
         }
 
         @include mq($from: col1) {
-            overflow: hidden;
             width: 100%;
             position: absolute;
-            bottom: 0;
+            top: 159px; // header 120px + 16px margin + 22px meta + 1px to avoid subpixel errors
         }
     }
 
@@ -153,7 +153,7 @@ Display a standard article card.
         font-family: $agate-sans;
         font-size: $meta-size-1;
         line-height: 1;
-        margin-top: 1em;
+        margin-top: 16px;
         overflow: hidden;
 
         @include mq($to: col1) {
@@ -175,12 +175,6 @@ Display a standard article card.
                 height: 170px;
                 @include flex(1);
                 @include order(3);
-            }
-
-            .card__image {
-                @include mq($from: col1) {
-                    margin-bottom: -1px;
-                }
             }
         }
 
@@ -240,7 +234,7 @@ Display a standard article card.
     }
 
     .card__meta {
-        width: cols($base-1, 1);
+        width: 100px;
         height: 22px;
         padding: base-px(0, 0, 0, .5);
         border-left: 1px solid color(shade-4);
@@ -255,26 +249,7 @@ Display a standard article card.
             margin-right: 3px;
         }
     }
-
-    .card__timestamp {
-        padding: base-px(0, 0, 0, .5);
-        width: 100px;
-    }
 }
-
-// Android Tweaks - Improved alignment of card timestamp and metadata
-
-// .android {
-//     .card {
-//         .card__timestamp {
-//             padding-top: 2px;
-//         }
-        
-//         .card__meta {
-//             padding-top: 2px;
-//         }
-//     }
-// }
 
 // Container context
 .container__body {
