--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -6233,12 +6233,13 @@
     @media all and (min-width: 28.125em) {
       #sandbox .card .card__container {
         position: relative;
-        padding-bottom: 60%; } }
+        padding-bottom: 60%;
+        overflow: hidden; } }
     #sandbox .card .card__header,
     #sandbox .card .card__object {
       padding: 3px 6px 0px 6px; }
     #sandbox .card .card__header {
-      margin-bottom: 1em; }
+      margin-bottom: 16px; }
       @media all and (max-width: 28.115em) {
         #sandbox .card .card__header {
           -webkit-box-flex: 1;
@@ -6265,16 +6266,15 @@
         order: 2; } }
     @media all and (min-width: 28.125em) {
       #sandbox .card .card__object {
-        overflow: hidden;
         width: 100%;
         position: absolute;
-        bottom: 0; } }
+        top: 159px; } }
     #sandbox .card .card__footer {
       color: #999;
       font-family: "Guardian Agate Sans 1 Web", sans-serif;
       font-size: 1.4rem;
       line-height: 1;
-      margin-top: 1em;
+      margin-top: 16px;
       overflow: hidden; }
       @media all and (max-width: 28.115em) {
         #sandbox .card .card__footer {
@@ -6296,9 +6296,6 @@
           -webkit-box-ordinal-group: 4;
           -webkit-order: 3;
           order: 3; } }
-      @media all and (min-width: 28.125em) {
-        #sandbox .card.has-image .card__object .card__image {
-          margin-bottom: -1px; } }
     @media all and (max-width: 28.115em) {
       #sandbox .card.has-image .card__footer {
         -webkit-box-flex: 1;
@@ -6343,7 +6340,7 @@
       bottom: 0;
       z-index: 0; }
     #sandbox .card .card__meta {
-      width: 21.73913%;
+      width: 100px;
       height: 22px;
       padding: 0px 0px 0px 6px;
       border-left: 1px solid #dcdad5;
@@ -6353,9 +6350,6 @@
         border-left: 0 none; }
       #sandbox .card .card__meta .icon {
         margin-right: 3px; }
-    #sandbox .card .card__timestamp {
-      padding: 0px 0px 0px 6px;
-      width: 100px; }
   @media all and (min-width: 28.125em) {
     #sandbox .container__body .card {
       float: left; } }
